# enigma2-plugin-partnerbox

./: .gitignore  configure.ac
src/: Makefile.am  PartnerboxAutoTimer.py  PartnerboxEPGList.py  PartnerboxEPGSelection.py  PartnerboxFunctions.py  PartnerboxRemoteInstantRecord.py  PartnerboxSetup.py  RemoteTimerEntry.py  RemoteTimerList.py  Services.py  connector.py  plugin.py
src/servicewebts/: Makefile.am
