SUBDIRS = icons

plugindir = $(libdir)/enigma2/python/Plugins/Extensions/Partnerbox

plugin_PYTHON = \
	PartnerboxEPGList.py \
	PartnerboxEPGSelection.py \
	PartnerboxFunctions.py \
	PartnerboxRemoteInstantRecord.py \
	PartnerboxSetup.py \
	RemoteTimerEntry.py \
	RemoteTimerList.py \
	Services.py \
	__init__.py \
	plugin.py \
	connector.py

plugin_DATA = \
	maintainer.info \
	Setup_Partnerbox.png
